--- a/movie-app/package.json
+++ b/movie-app/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
+    "react-star-ratings": "^2.3.0",
     "sass": "^1.77.8",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.4.1"
