--- a/movie-app/package.json
+++ b/movie-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "formik": "^2.4.6",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -18,7 +19,8 @@
     "react-star-ratings": "^2.3.0",
     "sass": "^1.77.8",
     "slick-carousel": "^1.8.1",
-    "swiper": "^9.4.1"
+    "swiper": "^9.4.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
